--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,3 @@
-DATABASE_URL=
-SECRET=
+DATABASE_URL=postgres://example:example@localhost:5432/sms-manager-db
+TEST_DB_URL=postgres://example:example@localhost:5432/test-sms-manager-db
+
