--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prestart": "yarn build",
     "start": "node build/server.js",
     "dev": "yarn lint & nodemon -x babel-node src/server.js -w src",
-    "prebuild": "rm -rm src",
+    "prebuild": "rm -rf build",
     "build": "babel src -d build",
     "lint": "eslint src tests",
     "db:migrate": "yarn db:migrate:undo && sequelize db:migrate",
@@ -30,6 +30,7 @@
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/register": "^7.4.0",
     "babel-eslint": "^10.0.1",
@@ -44,8 +45,11 @@
     "sequelize-cli": "^5.4.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
+    "morgan": "^1.9.1",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.2.12"
