--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint src tests",
     "db:migrate": "yarn db:migrate:undo && sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo:all",
-    "db:seed": "sequelize db:seed:undo:all && sequelize db:seed:all"
+    "db:seed": "sequelize db:seed:undo:all && sequelize db:seed:all",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "nyc": {
     "exclude": [
@@ -27,7 +28,8 @@
     ],
     "all": true,
     "reporter": [
-      "text"
+      "text",
+      "lcov"
     ]
   },
   "repository": {
@@ -49,6 +51,7 @@
     "@babel/register": "^7.4.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
